test/loop/confidence/errors/pattern_errors_7.loop
# Errors in pattern matching functions




scan(ls) =>
  [x,y,]                : []
  [x]       | x < 10    : [x]
            | x > 10      [10]
  [x:xs]                : scan(xs) + x

main ->
  scan([100,2,3])
